index.html - Fix width on mobile view.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,4 @@
-@media screen and ( max-width: 820px ) {
+@media screen and ( max-width: 767px ) {
     .mobile_hidden {
         display: none !important;
     }
@@ -55,7 +55,7 @@ h1{
     vertical-align: middle;
 }
 .max_with_1050{
-    max-width: 1050px;
+    max-width: 900px;
 }
 .mtb0 {
     margin-top: -2px;
